# mcp-atca-security

./: .pre-commit-config.yaml  Dockerfile  README.md  TASKS_5_4_5_5_COMPLETION_SUMMARY.md  TASK_2_5_COMPLETION_SUMMARY.md  basic_result.txt  config.env.example  docker-compose.yml  enhanced_result.txt  psi_tasks_5_4_5_5_integration_report.json  pyproject.toml  standalone_tasks_5_4_5_5_report.json  test_cache_standalone.py  test_cache_system.py  test_enhanced_adversarial_detection.py  test_modular_psi_system.py  test_psi_basic.py  test_psi_integration.py  test_psi_structure.py  test_psi_tasks_5_4_5_5_integration.py  test_tasks_5_4_5_5_standalone.py  test_tracing_integration.py
.cursor/rules/: document.mdc  general.mdc  python.mdc
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
docs/: EXPERIMENT_TOOLS.md
examples/: psi_adversarial_demo.py
mcp_security/: __init__.py  main.py
mcp_security/core/: __init__.py
mcp_security/core/psi/: __init__.py  adversarial_trainer.py  analyzers.py  anomaly_config.py  attacks.py  cache.py  data.py  detectors.py  engine.py  enhanced_detectors.py  evaluation.py  modular_architecture.py
mcp_security/integrations/: __init__.py
mcp_security/orchestrator/: __init__.py  security_orchestrator.py
mcp_security/utils/: __init__.py  config.py  elk.py  logging.py  security_events.py  tracing.py
tests/unit/: test_logging.py
